// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test input clear 1`] = `
"<div class=\\"var-input var-input--standard var--box\\"><label class=\\"var--relative\\" for=\\"var-input-118\\">
    <div class=\\"var-input__controller\\">
      <div class=\\"var-input__icon\\"></div>
      <div class=\\"var-input__wrap\\">
        <!--v-if--><input class=\\"var-input__input\\" autocomplete=\\"new-password\\" id=\\"var-input-118\\" type=\\"text\\"><label class=\\"var--ellipsis var-input__placeholder var-input--placeholder-hint\\" for=\\"var-input-118\\"></label>
      </div>
      <div class=\\"var-input__icon\\"><i class=\\"var-icon var-icon--set var-icon-close-circle var-input__clear-icon\\" style=\\"transition: transform 0ms; font-size: 14px;\\" var-input-cover=\\"\\"></i></div>
    </div>
    <div class=\\"var-input__line\\">
      <div class=\\"var-input__dot\\"></div>
    </div>
  </label>
  <transition-stub>
    <!--v-if-->
  </transition-stub>
</div>"
`;

exports[`test input events test input focus & blur 1`] = `
"<div class=\\"var-input var-input--standard var--box\\"><label class=\\"var--relative\\" for=\\"var-input-92\\">
    <div class=\\"var-input__controller var-input--focus\\">
      <div class=\\"var-input__icon\\"></div>
      <div class=\\"var-input__wrap\\">
        <!--v-if--><input class=\\"var-input__input\\" autocomplete=\\"new-password\\" id=\\"var-input-92\\" type=\\"text\\"><label class=\\"var--ellipsis var-input--focus var-input__placeholder var-input--placeholder-hint\\" for=\\"var-input-92\\"></label>
      </div>
      <div class=\\"var-input__icon\\">
        <!--v-if-->
      </div>
    </div>
    <div class=\\"var-input__line\\">
      <div class=\\"var-input__dot var-input--line-focus\\"></div>
    </div>
  </label>
  <transition-stub>
    <!--v-if-->
  </transition-stub>
</div>"
`;

exports[`test input events test input focus & blur 2`] = `
"<div class=\\"var-input var-input--standard var--box\\"><label class=\\"var--relative\\" for=\\"var-input-92\\">
    <div class=\\"var-input__controller\\">
      <div class=\\"var-input__icon\\"></div>
      <div class=\\"var-input__wrap\\">
        <!--v-if--><input class=\\"var-input__input\\" autocomplete=\\"new-password\\" id=\\"var-input-92\\" type=\\"text\\"><label class=\\"var--ellipsis var-input__placeholder\\" for=\\"var-input-92\\"></label>
      </div>
      <div class=\\"var-input__icon\\">
        <!--v-if-->
      </div>
    </div>
    <div class=\\"var-input__line\\">
      <div class=\\"var-input__dot\\"></div>
    </div>
  </label>
  <transition-stub>
    <!--v-if-->
  </transition-stub>
</div>"
`;

exports[`test input events test input focus & blur 3`] = `
"<div class=\\"var-input var-input--standard var--box\\"><label class=\\"var--relative\\" for=\\"var-input-96\\">
    <div class=\\"var-input__controller var-input--focus\\">
      <div class=\\"var-input__icon\\"></div>
      <div class=\\"var-input__wrap\\">
        <!--v-if--><textarea class=\\"var-input__input var-input--textarea\\" autocomplete=\\"new-password\\" id=\\"var-input-96\\" type=\\"text\\" rows=\\"8\\" style=\\"resize: none;\\">
          </textarea><label class=\\"var--ellipsis var-input--focus var-input__textarea-placeholder var-input--placeholder-hint\\" for=\\"var-input-96\\"></label>
      </div>
      <div class=\\"var-input__icon\\">
        <!--v-if-->
      </div>
    </div>
    <div class=\\"var-input__line\\">
      <div class=\\"var-input__dot var-input--line-focus\\"></div>
    </div>
  </label>
  <transition-stub>
    <!--v-if-->
  </transition-stub>
</div>"
`;

exports[`test input events test input focus & blur 4`] = `
"<div class=\\"var-input var-input--standard var--box\\"><label class=\\"var--relative\\" for=\\"var-input-96\\">
    <div class=\\"var-input__controller\\">
      <div class=\\"var-input__icon\\"></div>
      <div class=\\"var-input__wrap\\">
        <!--v-if--><textarea class=\\"var-input__input var-input--textarea\\" autocomplete=\\"new-password\\" id=\\"var-input-96\\" type=\\"text\\" rows=\\"8\\" style=\\"resize: none;\\">
          </textarea><label class=\\"var--ellipsis var-input__textarea-placeholder\\" for=\\"var-input-96\\"></label>
      </div>
      <div class=\\"var-input__icon\\">
        <!--v-if-->
      </div>
    </div>
    <div class=\\"var-input__line\\">
      <div class=\\"var-input__dot\\"></div>
    </div>
  </label>
  <transition-stub>
    <!--v-if-->
  </transition-stub>
</div>"
`;

exports[`test input example 1`] = `
"<div class=\\"app-type pb\\">基本使用</div>
<div class=\\"pb\\">
  <div class=\\"var-input var-input--standard var--box\\"><label class=\\"var--relative\\" for=\\"var-input-3\\">
      <div class=\\"var-input__controller\\">
        <div class=\\"var-input__icon\\"></div>
        <div class=\\"var-input__wrap\\">
          <!--v-if--><input class=\\"var-input__input\\" autocomplete=\\"new-password\\" id=\\"var-input-3\\" type=\\"text\\"><label class=\\"var--ellipsis var-input__placeholder\\" for=\\"var-input-3\\">请输入文本</label>
        </div>
        <div class=\\"var-input__icon\\">
          <!--v-if-->
        </div>
      </div>
      <div class=\\"var-input__line\\">
        <div class=\\"var-input__dot\\"></div>
      </div>
    </label>
    <transition-stub>
      <!--v-if-->
    </transition-stub>
  </div>
</div>
<div class=\\"pb\\">
  <div class=\\"var-input var-input--outlined var--box\\"><label class=\\"var--relative\\" for=\\"var-input-6\\">
      <div class=\\"var-input__controller\\">
        <div class=\\"var-input__icon\\"></div>
        <div class=\\"var-input__wrap\\">
          <!--v-if--><input class=\\"var-input__input\\" autocomplete=\\"new-password\\" id=\\"var-input-6\\" type=\\"text\\"><label class=\\"var--ellipsis var-input__placeholder\\" for=\\"var-input-6\\">请输入文本</label>
        </div>
        <div class=\\"var-input__icon\\">
          <!--v-if-->
        </div>
      </div>
      <div class=\\"var-input__line\\">
        <div class=\\"var-input__line__start\\"></div>
        <div class=\\"var-input__line__notch\\">
          <div class=\\"var-input__line__placeholder\\">请输入文本</div>
        </div>
        <div class=\\"var-input__line__end\\"></div>
      </div>
    </label>
    <transition-stub>
      <!--v-if-->
    </transition-stub>
  </div>
</div>
<div class=\\"app-type pb\\">小尺寸</div>
<div class=\\"pb\\">
  <div class=\\"var-input var-input--standard var-input--small var--box\\"><label class=\\"var--relative\\" for=\\"var-input-10\\">
      <div class=\\"var-input__controller\\">
        <div class=\\"var-input__icon\\"></div>
        <div class=\\"var-input__wrap\\">
          <!--v-if--><input class=\\"var-input__input\\" autocomplete=\\"new-password\\" id=\\"var-input-10\\" type=\\"text\\"><label class=\\"var--ellipsis var-input__placeholder\\" for=\\"var-input-10\\">请输入文本</label>
        </div>
        <div class=\\"var-input__icon\\">
          <!--v-if-->
        </div>
      </div>
      <div class=\\"var-input__line\\">
        <div class=\\"var-input__dot\\"></div>
      </div>
    </label>
    <transition-stub>
      <!--v-if-->
    </transition-stub>
  </div>
</div>
<div class=\\"pb\\">
  <div class=\\"var-input var-input--outlined var-input--small var--box\\"><label class=\\"var--relative\\" for=\\"var-input-13\\">
      <div class=\\"var-input__controller\\">
        <div class=\\"var-input__icon\\"></div>
        <div class=\\"var-input__wrap\\">
          <!--v-if--><input class=\\"var-input__input\\" autocomplete=\\"new-password\\" id=\\"var-input-13\\" type=\\"text\\"><label class=\\"var--ellipsis var-input__placeholder\\" for=\\"var-input-13\\">请输入文本</label>
        </div>
        <div class=\\"var-input__icon\\">
          <!--v-if-->
        </div>
      </div>
      <div class=\\"var-input__line\\">
        <div class=\\"var-input__line__start\\"></div>
        <div class=\\"var-input__line__notch\\">
          <div class=\\"var-input__line__placeholder\\">请输入文本</div>
        </div>
        <div class=\\"var-input__line__end\\"></div>
      </div>
    </label>
    <transition-stub>
      <!--v-if-->
    </transition-stub>
  </div>
</div>
<div class=\\"app-type pb\\">朴素模式</div>
<div class=\\"pb\\">
  <div class=\\"var-input var-input--standard var--box\\"><label class=\\"var--relative\\" for=\\"var-input-17\\">
      <div class=\\"var-input__controller\\">
        <div class=\\"var-input__icon var-input--non-hint\\"></div>
        <div class=\\"var-input__wrap var-input--wrap-non-hint\\">
          <!--v-if--><input class=\\"var-input__input\\" autocomplete=\\"new-password\\" id=\\"var-input-17\\" type=\\"text\\"><label class=\\"var--ellipsis var-input__placeholder var-input--placeholder-non-hint\\" for=\\"var-input-17\\">请输入文本</label>
        </div>
        <div class=\\"var-input__icon var-input--non-hint\\">
          <!--v-if-->
        </div>
      </div>
      <!--v-if-->
    </label>
    <transition-stub>
      <!--v-if-->
    </transition-stub>
  </div>
</div>
<div class=\\"app-type pb\\">文本域</div>
<div class=\\"pb\\">
  <div class=\\"var-input var-input--standard var--box\\"><label class=\\"var--relative\\" for=\\"var-input-21\\">
      <div class=\\"var-input__controller\\">
        <div class=\\"var-input__icon\\"></div>
        <div class=\\"var-input__wrap\\">
          <!--v-if--><textarea class=\\"var-input__input var-input--textarea\\" autocomplete=\\"new-password\\" id=\\"var-input-21\\" type=\\"text\\" rows=\\"8\\" style=\\"resize: none;\\">
          </textarea><label class=\\"var--ellipsis var-input__textarea-placeholder\\" for=\\"var-input-21\\">请输入文本</label>
        </div>
        <div class=\\"var-input__icon\\">
          <!--v-if-->
        </div>
      </div>
      <div class=\\"var-input__line\\">
        <div class=\\"var-input__dot\\"></div>
      </div>
    </label>
    <transition-stub>
      <!--v-if-->
    </transition-stub>
  </div>
</div>
<div class=\\"pb\\">
  <div class=\\"var-input var-input--outlined var--box\\"><label class=\\"var--relative\\" for=\\"var-input-24\\">
      <div class=\\"var-input__controller\\">
        <div class=\\"var-input__icon\\"></div>
        <div class=\\"var-input__wrap\\">
          <!--v-if--><textarea class=\\"var-input__input var-input--textarea\\" autocomplete=\\"new-password\\" id=\\"var-input-24\\" type=\\"text\\" rows=\\"8\\" style=\\"resize: none;\\">
          </textarea><label class=\\"var--ellipsis var-input__textarea-placeholder\\" for=\\"var-input-24\\">请输入文本</label>
        </div>
        <div class=\\"var-input__icon\\">
          <!--v-if-->
        </div>
      </div>
      <div class=\\"var-input__line\\">
        <div class=\\"var-input__line__start\\"></div>
        <div class=\\"var-input__line__notch\\">
          <div class=\\"var-input__line__placeholder\\">请输入文本</div>
        </div>
        <div class=\\"var-input__line__end\\"></div>
      </div>
    </label>
    <transition-stub>
      <!--v-if-->
    </transition-stub>
  </div>
</div>
<div class=\\"app-type pb\\">最大长度</div>
<div class=\\"pb\\">
  <div class=\\"var-input var-input--standard var--box\\"><label class=\\"var--relative\\" for=\\"var-input-28\\">
      <div class=\\"var-input__controller\\">
        <div class=\\"var-input__icon\\"></div>
        <div class=\\"var-input__wrap\\">
          <!--v-if--><input class=\\"var-input__input\\" autocomplete=\\"new-password\\" id=\\"var-input-28\\" type=\\"text\\" maxlength=\\"10\\"><label class=\\"var--ellipsis var-input__placeholder\\" for=\\"var-input-28\\">请输入文本</label>
        </div>
        <div class=\\"var-input__icon\\">
          <!--v-if-->
        </div>
      </div>
      <div class=\\"var-input__line\\">
        <div class=\\"var-input__dot\\"></div>
      </div>
    </label>
    <transition-stub>
      <div class=\\"var-form-details\\">
        <div class=\\"var-form-details__error-message\\">
          <transition-stub>
            <!--v-if-->
          </transition-stub>
        </div>
        <div class=\\"var-form-details__extra-message\\">
          <transition-stub>
            <div>0 / 10</div>
          </transition-stub>
        </div>
      </div>
    </transition-stub>
  </div>
</div>
<div class=\\"pb\\">
  <div class=\\"var-input var-input--outlined var--box\\"><label class=\\"var--relative\\" for=\\"var-input-33\\">
      <div class=\\"var-input__controller\\">
        <div class=\\"var-input__icon\\"></div>
        <div class=\\"var-input__wrap\\">
          <!--v-if--><input class=\\"var-input__input\\" autocomplete=\\"new-password\\" id=\\"var-input-33\\" type=\\"text\\" maxlength=\\"10\\"><label class=\\"var--ellipsis var-input__placeholder\\" for=\\"var-input-33\\">请输入文本</label>
        </div>
        <div class=\\"var-input__icon\\">
          <!--v-if-->
        </div>
      </div>
      <div class=\\"var-input__line\\">
        <div class=\\"var-input__line__start\\"></div>
        <div class=\\"var-input__line__notch\\">
          <div class=\\"var-input__line__placeholder\\">请输入文本</div>
        </div>
        <div class=\\"var-input__line__end\\"></div>
      </div>
    </label>
    <transition-stub>
      <div class=\\"var-form-details\\">
        <div class=\\"var-form-details__error-message\\">
          <transition-stub>
            <!--v-if-->
          </transition-stub>
        </div>
        <div class=\\"var-form-details__extra-message\\">
          <transition-stub>
            <div>0 / 10</div>
          </transition-stub>
        </div>
      </div>
    </transition-stub>
  </div>
</div>
<div class=\\"app-type pb\\">禁用</div>
<div class=\\"pb\\">
  <div class=\\"var-input var-input--standard var--box var-input--disabled\\"><label class=\\"var--relative\\" for=\\"var-input-39\\">
      <div class=\\"var-input__controller var-input--disabled\\">
        <div class=\\"var-input__icon\\"></div>
        <div class=\\"var-input__wrap\\">
          <!--v-if--><input class=\\"var-input__input var-input--disabled\\" autocomplete=\\"new-password\\" id=\\"var-input-39\\" disabled=\\"\\" type=\\"text\\"><label class=\\"var--ellipsis var-input--disabled var-input__placeholder\\" for=\\"var-input-39\\">请输入文本</label>
        </div>
        <div class=\\"var-input__icon\\">
          <!--v-if-->
        </div>
      </div>
      <div class=\\"var-input__line var-input--line-disabled\\">
        <div class=\\"var-input__dot var-input--line-disabled\\"></div>
      </div>
    </label>
    <transition-stub>
      <!--v-if-->
    </transition-stub>
  </div>
</div>
<div class=\\"pb\\">
  <div class=\\"var-input var-input--outlined var--box var-input--disabled\\"><label class=\\"var--relative\\" for=\\"var-input-42\\">
      <div class=\\"var-input__controller var-input--disabled\\">
        <div class=\\"var-input__icon\\"></div>
        <div class=\\"var-input__wrap\\">
          <!--v-if--><input class=\\"var-input__input var-input--disabled\\" autocomplete=\\"new-password\\" id=\\"var-input-42\\" disabled=\\"\\" type=\\"text\\"><label class=\\"var--ellipsis var-input--disabled var-input__placeholder\\" for=\\"var-input-42\\">请输入文本</label>
        </div>
        <div class=\\"var-input__icon\\">
          <!--v-if-->
        </div>
      </div>
      <div class=\\"var-input__line var-input--line-disabled\\">
        <!--v-if-->
      </div>
    </label>
    <transition-stub>
      <!--v-if-->
    </transition-stub>
  </div>
</div>
<div class=\\"app-type pb\\">只读</div>
<div class=\\"pb\\">
  <div class=\\"var-input var-input--standard var--box\\"><label class=\\"var--relative\\" for=\\"var-input-46\\">
      <div class=\\"var-input__controller\\">
        <div class=\\"var-input__icon\\"></div>
        <div class=\\"var-input__wrap\\">
          <!--v-if--><input class=\\"var-input__input\\" autocomplete=\\"new-password\\" id=\\"var-input-46\\" disabled=\\"\\" type=\\"text\\"><label class=\\"var--ellipsis var-input__placeholder\\" for=\\"var-input-46\\">请输入文本</label>
        </div>
        <div class=\\"var-input__icon\\">
          <!--v-if-->
        </div>
      </div>
      <div class=\\"var-input__line\\">
        <div class=\\"var-input__dot\\"></div>
      </div>
    </label>
    <transition-stub>
      <!--v-if-->
    </transition-stub>
  </div>
</div>
<div class=\\"pb\\">
  <div class=\\"var-input var-input--outlined var--box\\"><label class=\\"var--relative\\" for=\\"var-input-49\\">
      <div class=\\"var-input__controller\\">
        <div class=\\"var-input__icon\\"></div>
        <div class=\\"var-input__wrap\\">
          <!--v-if--><input class=\\"var-input__input\\" autocomplete=\\"new-password\\" id=\\"var-input-49\\" disabled=\\"\\" type=\\"text\\"><label class=\\"var--ellipsis var-input__placeholder\\" for=\\"var-input-49\\">请输入文本</label>
        </div>
        <div class=\\"var-input__icon\\">
          <!--v-if-->
        </div>
      </div>
      <div class=\\"var-input__line\\">
        <div class=\\"var-input__line__start\\"></div>
        <div class=\\"var-input__line__notch\\">
          <div class=\\"var-input__line__placeholder\\">请输入文本</div>
        </div>
        <div class=\\"var-input__line__end\\"></div>
      </div>
    </label>
    <transition-stub>
      <!--v-if-->
    </transition-stub>
  </div>
</div>
<div class=\\"app-type pb\\">可清除</div>
<div class=\\"pb\\">
  <div class=\\"var-input var-input--standard var--box\\"><label class=\\"var--relative\\" for=\\"var-input-53\\">
      <div class=\\"var-input__controller\\">
        <div class=\\"var-input__icon\\"></div>
        <div class=\\"var-input__wrap\\">
          <!--v-if--><input class=\\"var-input__input\\" autocomplete=\\"new-password\\" id=\\"var-input-53\\" type=\\"text\\"><label class=\\"var--ellipsis var-input__placeholder var-input--placeholder-hint\\" for=\\"var-input-53\\">请输入文本</label>
        </div>
        <div class=\\"var-input__icon\\"><i class=\\"var-icon var-icon--set var-icon-close-circle var-input__clear-icon\\" style=\\"transition: transform 0ms; font-size: 14px;\\" var-input-cover=\\"\\"></i></div>
      </div>
      <div class=\\"var-input__line\\">
        <div class=\\"var-input__dot\\"></div>
      </div>
    </label>
    <transition-stub>
      <!--v-if-->
    </transition-stub>
  </div>
</div>
<div class=\\"pb\\">
  <div class=\\"var-input var-input--outlined var--box\\"><label class=\\"var--relative\\" for=\\"var-input-57\\">
      <div class=\\"var-input__controller\\">
        <div class=\\"var-input__icon\\"></div>
        <div class=\\"var-input__wrap\\">
          <!--v-if--><input class=\\"var-input__input\\" autocomplete=\\"new-password\\" id=\\"var-input-57\\" type=\\"text\\"><label class=\\"var--ellipsis var-input__placeholder var-input--placeholder-hint\\" for=\\"var-input-57\\">请输入文本</label>
        </div>
        <div class=\\"var-input__icon\\"><i class=\\"var-icon var-icon--set var-icon-close-circle var-input__clear-icon\\" style=\\"transition: transform 0ms; font-size: 14px;\\" var-input-cover=\\"\\"></i></div>
      </div>
      <div class=\\"var-input__line\\">
        <div class=\\"var-input__line__start\\"></div>
        <div class=\\"var-input__line__notch var-input__line__notch--hint\\">
          <div class=\\"var-input__line__placeholder\\">请输入文本</div>
        </div>
        <div class=\\"var-input__line__end\\"></div>
      </div>
    </label>
    <transition-stub>
      <!--v-if-->
    </transition-stub>
  </div>
</div>
<div class=\\"app-type pb\\">显示图标</div>
<div class=\\"pb\\">
  <div class=\\"var-input var-input--standard var--box\\"><label class=\\"var--relative\\" for=\\"var-input-62\\">
      <div class=\\"var-input__controller\\">
        <div class=\\"var-input__icon\\"><i class=\\"var-icon var-icon--set var-icon-plus prepend-icon\\" style=\\"transition: transform 0ms;\\"></i></div>
        <div class=\\"var-input__wrap\\">
          <!--v-if--><input class=\\"var-input__input\\" autocomplete=\\"new-password\\" id=\\"var-input-62\\" type=\\"text\\"><label class=\\"var--ellipsis var-input__placeholder\\" for=\\"var-input-62\\">请输入文本</label>
        </div>
        <div class=\\"var-input__icon\\"><i class=\\"var-icon var-icon--set var-icon-minus append-icon\\" style=\\"transition: transform 0ms;\\"></i></div>
      </div>
      <div class=\\"var-input__line\\">
        <div class=\\"var-input__dot\\"></div>
      </div>
    </label>
    <transition-stub>
      <!--v-if-->
    </transition-stub>
  </div>
</div>
<div class=\\"pb\\">
  <div class=\\"var-input var-input--outlined var--box\\"><label class=\\"var--relative\\" for=\\"var-input-67\\">
      <div class=\\"var-input__controller\\">
        <div class=\\"var-input__icon\\"><i class=\\"var-icon var-icon--set var-icon-plus prepend-icon\\" style=\\"transition: transform 0ms;\\"></i></div>
        <div class=\\"var-input__wrap\\">
          <!--v-if--><input class=\\"var-input__input\\" autocomplete=\\"new-password\\" id=\\"var-input-67\\" type=\\"text\\"><label class=\\"var--ellipsis var-input__placeholder\\" for=\\"var-input-67\\">请输入文本</label>
        </div>
        <div class=\\"var-input__icon\\"><i class=\\"var-icon var-icon--set var-icon-minus append-icon\\" style=\\"transition: transform 0ms;\\"></i></div>
      </div>
      <div class=\\"var-input__line\\">
        <div class=\\"var-input__line__start\\"></div>
        <div class=\\"var-input__line__notch\\">
          <div class=\\"var-input__line__placeholder\\">请输入文本</div>
        </div>
        <div class=\\"var-input__line__end\\"></div>
      </div>
    </label>
    <transition-stub>
      <!--v-if-->
    </transition-stub>
  </div>
</div>
<div class=\\"app-type\\">字段校验</div>
<div class=\\"pb\\">
  <div class=\\"var-input var-input--standard var--box\\"><label class=\\"var--relative\\" for=\\"var-input-73\\">
      <div class=\\"var-input__controller\\">
        <div class=\\"var-input__icon\\"></div>
        <div class=\\"var-input__wrap\\">
          <!--v-if--><input class=\\"var-input__input\\" autocomplete=\\"new-password\\" id=\\"var-input-73\\" type=\\"text\\"><label class=\\"var--ellipsis var-input__placeholder\\" for=\\"var-input-73\\">请输入文本</label>
        </div>
        <div class=\\"var-input__icon\\">
          <!--v-if-->
        </div>
      </div>
      <div class=\\"var-input__line\\">
        <div class=\\"var-input__dot\\"></div>
      </div>
    </label>
    <transition-stub>
      <!--v-if-->
    </transition-stub>
  </div>
</div>
<div>
  <div class=\\"var-input var-input--outlined var--box\\"><label class=\\"var--relative\\" for=\\"var-input-76\\">
      <div class=\\"var-input__controller\\">
        <div class=\\"var-input__icon\\"></div>
        <div class=\\"var-input__wrap\\">
          <!--v-if--><input class=\\"var-input__input\\" autocomplete=\\"new-password\\" id=\\"var-input-76\\" type=\\"text\\"><label class=\\"var--ellipsis var-input__placeholder\\" for=\\"var-input-76\\">请输入文本</label>
        </div>
        <div class=\\"var-input__icon\\">
          <!--v-if-->
        </div>
      </div>
      <div class=\\"var-input__line\\">
        <div class=\\"var-input__line__start\\"></div>
        <div class=\\"var-input__line__notch\\">
          <div class=\\"var-input__line__placeholder\\">请输入文本</div>
        </div>
        <div class=\\"var-input__line__end\\"></div>
      </div>
    </label>
    <transition-stub>
      <!--v-if-->
    </transition-stub>
  </div>
</div>
<div style=\\"height: 40px;\\"></div>"
`;

exports[`test input hint to be false 1`] = `
"<div class=\\"var-input var-input--standard var--box\\"><label class=\\"var--relative\\" for=\\"var-input-114\\">
    <div class=\\"var-input__controller\\">
      <div class=\\"var-input__icon var-input--non-hint\\"></div>
      <div class=\\"var-input__wrap var-input--wrap-non-hint\\">
        <!--v-if--><input class=\\"var-input__input\\" autocomplete=\\"new-password\\" id=\\"var-input-114\\" type=\\"text\\"><label class=\\"var--ellipsis var-input__placeholder var-input--placeholder-hidden var-input--placeholder-non-hint\\" for=\\"var-input-114\\"></label>
      </div>
      <div class=\\"var-input__icon var-input--non-hint\\">
        <!--v-if-->
      </div>
    </div>
    <div class=\\"var-input__line\\">
      <div class=\\"var-input__dot\\"></div>
    </div>
  </label>
  <transition-stub>
    <!--v-if-->
  </transition-stub>
</div>"
`;

exports[`test input maxlength 1`] = `
"<div class=\\"var-input var-input--standard var--box\\"><label class=\\"var--relative\\" for=\\"var-input-108\\">
    <div class=\\"var-input__controller\\">
      <div class=\\"var-input__icon\\"></div>
      <div class=\\"var-input__wrap\\">
        <!--v-if--><input class=\\"var-input__input\\" autocomplete=\\"new-password\\" id=\\"var-input-108\\" type=\\"text\\" maxlength=\\"100\\"><label class=\\"var--ellipsis var-input__placeholder var-input--placeholder-hint\\" for=\\"var-input-108\\"></label>
      </div>
      <div class=\\"var-input__icon\\">
        <!--v-if-->
      </div>
    </div>
    <div class=\\"var-input__line\\">
      <div class=\\"var-input__dot\\"></div>
    </div>
  </label>
  <transition-stub>
    <div class=\\"var-form-details\\">
      <div class=\\"var-form-details__error-message\\">
        <transition-stub>
          <!--v-if-->
        </transition-stub>
      </div>
      <div class=\\"var-form-details__extra-message\\">
        <transition-stub>
          <div>4/100</div>
        </transition-stub>
      </div>
    </div>
  </transition-stub>
</div>"
`;

exports[`test input size 1`] = `
"<div class=\\"var-input var-input--standard var-input--small var--box\\"><label class=\\"var--relative\\" for=\\"var-input-88\\">
    <div class=\\"var-input__controller\\">
      <div class=\\"var-input__icon\\"></div>
      <div class=\\"var-input__wrap\\">
        <!--v-if--><input class=\\"var-input__input\\" autocomplete=\\"new-password\\" id=\\"var-input-88\\" type=\\"text\\"><label class=\\"var--ellipsis var-input__placeholder var-input--placeholder-hint\\" for=\\"var-input-88\\"></label>
      </div>
      <div class=\\"var-input__icon\\">
        <!--v-if-->
      </div>
    </div>
    <div class=\\"var-input__line\\">
      <div class=\\"var-input__dot\\"></div>
    </div>
  </label>
  <transition-stub>
    <!--v-if-->
  </transition-stub>
</div>"
`;

exports[`test input validation 1`] = `
"<div class=\\"var-input var-input--standard var--box\\"><label class=\\"var--relative\\" for=\\"var-input-133\\">
    <div class=\\"var-input__controller var-input--error\\">
      <div class=\\"var-input__icon\\"></div>
      <div class=\\"var-input__wrap\\">
        <!--v-if--><input class=\\"var-input__input var-input--caret-error\\" autocomplete=\\"new-password\\" id=\\"var-input-133\\" type=\\"text\\"><label class=\\"var--ellipsis var-input--error var-input__placeholder var-input--placeholder-hint\\" for=\\"var-input-133\\"></label>
      </div>
      <div class=\\"var-input__icon\\">
        <!--v-if-->
      </div>
    </div>
    <div class=\\"var-input__line var-input--line-error\\">
      <div class=\\"var-input__dot var-input--line-error\\"></div>
    </div>
  </label>
  <transition-stub>
    <div class=\\"var-form-details\\">
      <div class=\\"var-form-details__error-message\\">
        <transition-stub>
          <div>长度必须大于3</div>
        </transition-stub>
      </div>
      <div class=\\"var-form-details__extra-message\\">
        <transition-stub>
          <!--v-if-->
        </transition-stub>
      </div>
    </div>
  </transition-stub>
</div>"
`;

exports[`test input validation 2`] = `
"<div class=\\"var-input var-input--standard var--box\\"><label class=\\"var--relative\\" for=\\"var-input-133\\">
    <div class=\\"var-input__controller\\">
      <div class=\\"var-input__icon\\"></div>
      <div class=\\"var-input__wrap\\">
        <!--v-if--><input class=\\"var-input__input\\" autocomplete=\\"new-password\\" id=\\"var-input-133\\" type=\\"text\\"><label class=\\"var--ellipsis var-input__placeholder\\" for=\\"var-input-133\\"></label>
      </div>
      <div class=\\"var-input__icon\\">
        <!--v-if-->
      </div>
    </div>
    <div class=\\"var-input__line\\">
      <div class=\\"var-input__dot\\"></div>
    </div>
  </label>
  <transition-stub>
    <!--v-if-->
  </transition-stub>
</div>"
`;

exports[`test input validation 3`] = `
"<div class=\\"var-input var-input--standard var--box\\"><label class=\\"var--relative\\" for=\\"var-input-133\\">
    <div class=\\"var-input__controller\\">
      <div class=\\"var-input__icon\\"></div>
      <div class=\\"var-input__wrap\\">
        <!--v-if--><input class=\\"var-input__input\\" autocomplete=\\"new-password\\" id=\\"var-input-133\\" type=\\"text\\"><label class=\\"var--ellipsis var-input__placeholder var-input--placeholder-hint\\" for=\\"var-input-133\\"></label>
      </div>
      <div class=\\"var-input__icon\\">
        <!--v-if-->
      </div>
    </div>
    <div class=\\"var-input__line\\">
      <div class=\\"var-input__dot\\"></div>
    </div>
  </label>
  <transition-stub>
    <!--v-if-->
  </transition-stub>
</div>"
`;

exports[`test input variant 1`] = `
"<div class=\\"var-input var-input--standard var--box\\"><label class=\\"var--relative\\" for=\\"var-input-80\\">
    <div class=\\"var-input__controller\\">
      <div class=\\"var-input__icon\\"></div>
      <div class=\\"var-input__wrap\\">
        <!--v-if--><input class=\\"var-input__input\\" autocomplete=\\"new-password\\" id=\\"var-input-80\\" type=\\"text\\"><label class=\\"var--ellipsis var-input__placeholder var-input--placeholder-hint\\" for=\\"var-input-80\\"></label>
      </div>
      <div class=\\"var-input__icon\\">
        <!--v-if-->
      </div>
    </div>
    <div class=\\"var-input__line\\">
      <div class=\\"var-input__dot\\"></div>
    </div>
  </label>
  <transition-stub>
    <!--v-if-->
  </transition-stub>
</div>"
`;

exports[`test input variant 2`] = `
"<div class=\\"var-input var-input--outlined var--box\\"><label class=\\"var--relative\\" for=\\"var-input-84\\">
    <div class=\\"var-input__controller\\">
      <div class=\\"var-input__icon\\"></div>
      <div class=\\"var-input__wrap\\">
        <!--v-if--><input class=\\"var-input__input\\" autocomplete=\\"new-password\\" id=\\"var-input-84\\" type=\\"text\\"><label class=\\"var--ellipsis var-input__placeholder var-input--placeholder-hint\\" for=\\"var-input-84\\"></label>
      </div>
      <div class=\\"var-input__icon\\">
        <!--v-if-->
      </div>
    </div>
    <div class=\\"var-input__line\\">
      <div class=\\"var-input__line__start\\"></div>
      <div class=\\"var-input__line__notch var-input__line__notch--hint\\">
        <div class=\\"var-input__line__placeholder\\"></div>
      </div>
      <div class=\\"var-input__line__end\\"></div>
    </div>
  </label>
  <transition-stub>
    <!--v-if-->
  </transition-stub>
</div>"
`;
